
Graph Plugin:
 - Allowed constraints to be created using drag and drop.
   To create such a non DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  

 - Updated Korean translation available (Thanks to Youngwoo Kim)


Bug-Fixes:

Error in Alias tree: Alias vanished / rose error when dragged on itself.

2853329: Ctrl-S overwrites existing file on 2nd try

2819161:  squirrel-sql.sh in plain zip had an errant apostrophe.  Tested this fix on MacOS 10 and Ubuntu 9.04.  
Thanks to Jonathan James for vetting the anonymously submitted patch.

SQL Scripts Plugin:
 Several scripting functions did not respect global scripting preferences about qualifying tables.

SQL Scripts Plugin:
 Foreign key constraints with more than one column were not scripted correctly. (Only first column was included.)  


Schema caching:
 Removed problems with selective schema caching when the same table name
 exisits in two different schemas. E.g. column completion didn't word anymore.

SQL Scripts Plugin:
 - When generating insert scripts from a SQL statement the global
   preference "Qualify table names in generated scripts with the schema name" did not work.
   Thanks to Johann Geyer for the patch (Patch ID 2365193)

SQL Scripts Plugin:
 - Generating data scripts may throw java.lang.StringIndexOutOfBoundsException when timestamps where scripted


SP that returned a mix of update counts and results sets weren't displayed properly.

2801011: Sybase (CREATE TABLE script generate decimal(15,2) instead of (15,4))
2794860: Sybase (CREATE TABLE script generate numeric(15) instead (15,2))
2754166: SQLScript plugin loses precision for Timestamp in H2
2746982: Error occured in IPlugin.sessionEnded() for SQL Parametrisation
2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)
2657987: Session was closed even if session closing confirm dialog was not confirmed. Connection was not 